First shot at using Device abstraction for ITs
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>